package com.the9.common.proto;
import "common.proto";
message LoginGameReq{
}
message LoginGameAck{
	required UserDTO userDTO=1;
}
message LoginOutReq{
	required int32 userId=1;
}
message GetServerConfigReq{
}
message GetServerConfigAck{
	required ServerConfigDTO cerverConfigDTO=1;
}